--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -37,7 +37,7 @@
     var authorized = [[${authorized}]];
 	var authorizedGC = [[${authorizedGC}]];
     var oauthToken = [[${accessToken}]];
-    var selectedColumns = [[${selectedColumns}]];
+    var deselectedColumns = [[${deselectedColumns}]];
 /*]]>*/
 </script>
 </head>
@@ -301,7 +301,7 @@
 						class="form-control" name="totalSize" id="totalSizeId"
 						 th:value="${hpcSearch.getTotalSize()}"/>
 					<input type="hidden"
-						class="form-control" name="selectedColumns" id="selectedColumnsId"/>		
+						class="form-control" name="deselectedColumns" id="deselectedColumnsId"/>		
 				</form>
 				<form class="form-horizontal" id="searchForm"
 					th:object="${hpcSearch}" method="POST" th:action="@{/search}">
@@ -315,7 +315,7 @@
 						class="form-control" name="totalSize" id="totalSize"
 						 th:value="${hpcSearch.getTotalSize()}"/>
 					<input type="hidden"
-						class="form-control" name="selectedColumns" id="selectedColumns"/>
+						class="form-control" name="deselectedColumns" id="deselectedColumns"/>
 				</form>
             </div>
           </div>
@@ -501,11 +501,11 @@
 		function goBack()
 		{
 			if(source != null && source == "search") {
-				document.getElementById("searchForm").elements.namedItem("selectedColumns").value = selectedColumns;
+				document.getElementById("searchForm").elements.namedItem("deselectedColumns").value = deselectedColumns;
 				document.getElementById("searchForm").submit();
 			}
 			else if(source != null && source == "criteria") {
-				document.getElementById("criteriaForm").elements.namedItem("selectedColumns").value = selectedColumns;
+				document.getElementById("criteriaForm").elements.namedItem("deselectedColumns").value = deselectedColumns;
 				document.getElementById("criteriaForm").submit();
 			}
 			else if(downloadType == "collection")
