--- a/src/hpc-web/src/main/resources/templates/link.html
+++ b/src/hpc-web/src/main/resources/templates/link.html
@@ -40,7 +40,7 @@
 /*<![CDATA[*/
     var linkFilePath = [[${linkFilePath}]];
     var source = [[${source}]];
-    var selectedColumns = [[${selectedColumns}]];
+    var deselectedColumns = [[${deselectedColumns}]];
 /*]]>*/
 </script>
 </head>
@@ -135,7 +135,7 @@
 						class="form-control" name="totalSize" id="totalSizeId"
 						 th:value="${hpcSearch.getTotalSize()}"/>
 					<input type="hidden"
-						class="form-control" name="selectedColumns" id="selectedColumnsId"/>
+						class="form-control" name="deselectedColumns" id="deselectedColumnsId"/>
 				</form>
 				<form class="form-horizontal" id="searchForm"
 					th:object="${hpcSearch}" method="POST" th:action="@{/search}">
@@ -149,7 +149,7 @@
 						class="form-control" name="totalSize" id="totalSize"
 						 th:value="${hpcSearch.getTotalSize()}"/>
 					<input type="hidden"
-						class="form-control" name="selectedColumns" id="selectedColumns"/>
+						class="form-control" name="deselectedColumns" id="deselectedColumns"/>
 				</form>
             </div>
           </div>
@@ -195,11 +195,11 @@
 		function goBack()
 		{
 			if(source != null && source == "search") {
-				document.getElementById("searchForm").elements.namedItem("selectedColumns").value = selectedColumns;
+				document.getElementById("searchForm").elements.namedItem("deselectedColumns").value = deselectedColumns;
 				document.getElementById("searchForm").submit();
 			}
 			else if(source != null && source == "criteria") {
-				document.getElementById("criteriaForm").elements.namedItem("selectedColumns").value = selectedColumns;
+				document.getElementById("criteriaForm").elements.namedItem("deselectedColumns").value = deselectedColumns;
 				document.getElementById("criteriaForm").submit();
 			}
 		}
