--- a/src/hpc-web/src/main/resources/templates/linkfiles.html
+++ b/src/hpc-web/src/main/resources/templates/linkfiles.html
@@ -51,7 +51,7 @@
 <script th:inline="javascript">
 /*<![CDATA[*/
     var selectedPaths = [[${hpcLinkDatafile.getSelectedPaths()}]];
-    var selectedColumns = [[${hpcSearch.getSelectedColumns()}]];
+    var deselectedColumns = [[${hpcSearch.getDeselectedColumns()}]];
 /*]]>*/
 </script>
 <style>
@@ -159,7 +159,7 @@
 				class="form-control" name="totalSize" id="totalSizeId"
 				 th:value="${hpcSearch.getTotalSize()}"/>
 			<input type="hidden"
-				class="form-control" name="selectedColumns" id="selectedColumnsId"/>		
+				class="form-control" name="deselectedColumns" id="deselectedColumnsId"/>		
 		</form>
 		<form class="form-horizontal" id="searchForm"
 			th:object="${hpcSearch}" method="POST" th:action="@{/search}">
@@ -173,7 +173,7 @@
 				class="form-control" name="totalSize" id="totalSize"
 				 th:value="${hpcSearch.getTotalSize()}"/>
 			<input type="hidden"
-				class="form-control" name="selectedColumns" id="selectedColumns"/>
+				class="form-control" name="deselectedColumns" id="deselectedColumns"/>
 		</form>
 						</div>
 				</div>
@@ -213,11 +213,11 @@
 		function goBack()
 		{
 			if(searchType == "search") {
-			    document.getElementById("searchForm").elements.namedItem("selectedColumns").value = selectedColumns;
+			    document.getElementById("searchForm").elements.namedItem("deselectedColumns").value = deselectedColumns;
 				document.getElementById("searchForm").submit();
 			}
 			else {
-			    document.getElementById("criteriaForm").elements.namedItem("selectedColumns").value = selectedColumns;
+			    document.getElementById("criteriaForm").elements.namedItem("deselectedColumns").value = deselectedColumns;
 				document.getElementById("criteriaForm").submit();
 			}
 		}
